--- a/webbuch/EPUB/document-3.xhtml
+++ b/webbuch/EPUB/document-3.xhtml
@@ -3,7 +3,7 @@
   <head>
     <title>KID02. Kooperationslandschaft</title>
     <link rel="stylesheet" type="text/css" href="css/document.css" />
-    <link rel="stylesheet" type="text/css" href="css/elephant.css" />
+    <link rel="stylesheet" type="text/css" href="css/ebook.css" />
   </head>
   <body>
     <div class="article-part article-title" id="_3_0">KID02. Kooperationslandschaft</div>
