--- a/webbuch/EPUB/document-6.xhtml
+++ b/webbuch/EPUB/document-6.xhtml
@@ -3,7 +3,7 @@
   <head>
     <title>KID05. Ausblick</title>
     <link rel="stylesheet" type="text/css" href="css/document.css" />
-    <link rel="stylesheet" type="text/css" href="css/elephant.css" />
+    <link rel="stylesheet" type="text/css" href="css/ebook.css" />
   </head>
   <body>
     <div class="article-part article-title" id="_6_0">KID05. Ausblick</div>
