--- a/webbuch/EPUB/document-7.xhtml
+++ b/webbuch/EPUB/document-7.xhtml
@@ -3,7 +3,7 @@
   <head>
     <title>KIDAnnex 01. Abkürzungen</title>
     <link rel="stylesheet" type="text/css" href="css/document.css" />
-    <link rel="stylesheet" type="text/css" href="css/elephant.css" />
+    <link rel="stylesheet" type="text/css" href="css/ebook.css" />
   </head>
   <body>
     <div class="article-part article-title" id="_7_0">KIDAnnex 01. Abkürzungen</div>
