--- a/webbuch/EPUB/titlepage.xhtml
+++ b/webbuch/EPUB/titlepage.xhtml
@@ -7,7 +7,7 @@
   <body style="text-align: center;">
     <div id="title" epub:type="frontmatter titlepage">
       <h1>KID (Der Kinder-und Jugendgesundheitsdienst) TEST</h1>
-      <h2>Vivlio 2.1.1</h2>
+      <h2>Lehrbuch</h2>
       <h3>by Böhm, Heidrun; Cwojdzinski, Detlef; Grote, Ulrike; Heitkötter, Kalle; Knauer, Christine; Möller, Ingrid; Pukropski, Guido; Sasse, Julia; Schmidt, Tanja; Siering, Ute; Stark, Karlin; Steul, Katrin; Tinnemann, Peter</h3>
     </div>
   </body>
