--- a/webbuch/EPUB/document-1.xhtml
+++ b/webbuch/EPUB/document-1.xhtml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de" xmlns:epub="http://www.idpf.org/2007/ops">
   <head>
-    <title>KID00Startseite</title>
+    <title>KID00iStartseite</title>
     <link rel="stylesheet" type="text/css" href="css/document.css" />
-    <link rel="stylesheet" type="text/css" href="css/elephant.css" />
+    <link rel="stylesheet" type="text/css" href="css/ebook.css" />
   </head>
   <body>
-    <div class="article-part article-title" id="_1_0">KID00Startseite</div>
+    <div class="article-part article-title" id="_1_0">KID00iStartseite</div>
     <div class="article-part article-heading article-subtitle" data-hidden="true" />
     <div class="article-part article-contributors article-authors" data-hidden="true" />
     <div class="article-part article-richtext article-abstract" data-hidden="true" />
