--- a/webbuch/EPUB/document-10.xhtml
+++ b/webbuch/EPUB/document-10.xhtml
@@ -3,7 +3,7 @@
   <head>
     <title>KIDa. Beteiligte</title>
     <link rel="stylesheet" type="text/css" href="css/document.css" />
-    <link rel="stylesheet" type="text/css" href="css/elephant.css" />
+    <link rel="stylesheet" type="text/css" href="css/ebook.css" />
   </head>
   <body>
     <div class="article-part article-title" id="_10_0">KIDa. Beteiligte</div>
