--- a/webbuch/EPUB/document-11.xhtml
+++ b/webbuch/EPUB/document-11.xhtml
@@ -3,7 +3,7 @@
   <head>
     <title>KIDb. Über uns</title>
     <link rel="stylesheet" type="text/css" href="css/document.css" />
-    <link rel="stylesheet" type="text/css" href="css/elephant.css" />
+    <link rel="stylesheet" type="text/css" href="css/ebook.css" />
   </head>
   <body>
     <div class="article-part article-title" id="_11_0">KIDb. Über uns</div>
