--- a/webbuch/EPUB/document-12.xhtml
+++ b/webbuch/EPUB/document-12.xhtml
@@ -3,7 +3,7 @@
   <head>
     <title>KIDc. Impressum</title>
     <link rel="stylesheet" type="text/css" href="css/document.css" />
-    <link rel="stylesheet" type="text/css" href="css/elephant.css" />
+    <link rel="stylesheet" type="text/css" href="css/ebook.css" />
   </head>
   <body>
     <div class="article-part article-title" id="_12_0">KIDc. Impressum</div>
