--- a/webbuch/EPUB/document-2.xhtml
+++ b/webbuch/EPUB/document-2.xhtml
@@ -3,7 +3,7 @@
   <head>
     <title>KID01. Präambel</title>
     <link rel="stylesheet" type="text/css" href="css/document.css" />
-    <link rel="stylesheet" type="text/css" href="css/elephant.css" />
+    <link rel="stylesheet" type="text/css" href="css/ebook.css" />
   </head>
   <body>
     <div class="article-part article-title" id="_2_0">KID01. Präambel</div>
