--- a/webbuch/EPUB/document-4.xhtml
+++ b/webbuch/EPUB/document-4.xhtml
@@ -3,7 +3,7 @@
   <head>
     <title>KID03. Handlungsfelder</title>
     <link rel="stylesheet" type="text/css" href="css/document.css" />
-    <link rel="stylesheet" type="text/css" href="css/elephant.css" />
+    <link rel="stylesheet" type="text/css" href="css/ebook.css" />
   </head>
   <body>
     <div class="article-part article-title" id="_4_0">KID03. Handlungsfelder</div>
