--- a/webbuch/EPUB/document-5.xhtml
+++ b/webbuch/EPUB/document-5.xhtml
@@ -3,7 +3,7 @@
   <head>
     <title>KID04. Systemische Aspekte</title>
     <link rel="stylesheet" type="text/css" href="css/document.css" />
-    <link rel="stylesheet" type="text/css" href="css/elephant.css" />
+    <link rel="stylesheet" type="text/css" href="css/ebook.css" />
   </head>
   <body>
     <div class="article-part article-title" id="_5_0">KID04. Systemische Aspekte</div>
