--- a/webbuch/EPUB/document-8.xhtml
+++ b/webbuch/EPUB/document-8.xhtml
@@ -3,7 +3,7 @@
   <head>
     <title>KIDAnnex 02. Weblinks</title>
     <link rel="stylesheet" type="text/css" href="css/document.css" />
-    <link rel="stylesheet" type="text/css" href="css/elephant.css" />
+    <link rel="stylesheet" type="text/css" href="css/ebook.css" />
   </head>
   <body>
     <div class="article-part article-title" id="_8_0">KIDAnnex 02. Weblinks</div>
