--- a/webbuch/EPUB/document-9.xhtml
+++ b/webbuch/EPUB/document-9.xhtml
@@ -3,7 +3,7 @@
   <head>
     <title>KIDAnnex 03. Weiterführende Literatur</title>
     <link rel="stylesheet" type="text/css" href="css/document.css" />
-    <link rel="stylesheet" type="text/css" href="css/elephant.css" />
+    <link rel="stylesheet" type="text/css" href="css/ebook.css" />
   </head>
   <body>
     <div class="article-part article-title" id="_9_0">KIDAnnex 03. Weiterführende Literatur</div>
