--- a/webbuch/EPUB/document-nav.xhtml
+++ b/webbuch/EPUB/document-nav.xhtml
@@ -8,9 +8,11 @@
   <body>
     <nav epub:type="toc" id="toc">
       <ol>
+        <li><a href="cover.xhtml#cover">Cover</a>
+        </li>
         <li><a href="titlepage.xhtml#title">Title page</a>
         </li>
-        <li><a href="document-1.xhtml#_1_0">KID00Startseite</a>
+        <li><a href="document-1.xhtml#_1_0">KID00iStartseite</a>
         </li>
         <li><a href="document-2.xhtml#_2_0">KID01. Präambel</a>
           <ol>
